# sql-ops-agent

./: .gitignore  Makefile  README.md  all_tests.txt  debug_limit.py  debug_retriever.py  err2.txt  integ_fail.txt  last_fail.txt  last_run.txt  out.txt  pyproject.toml  test_clean.txt  test_demo.py  test_demo_out.txt  test_import.py  test_limit.py  test_log.txt  test_out.txt  test_output.txt
.github/workflows/: ci.yml  deploy-azure.yml  docker-publish.yml
bench/: cases.yaml
docs/: sample.md
eval/reports/: latest.json
infra/: Dockerfile  docker-compose.yml
infra/azure/: README.md
rag/docs/: query_sop.md  runbooks.md  schema.md
sql_ops_agent/: orchestrator.py
sql_ops_agent/api/: main.py
sql_ops_agent/eval/: harness.py
sql_ops_agent/llm/: base.py  openai_compatible.py
sql_ops_agent/observability/: logging.py  metrics.py
sql_ops_agent/rag/: index.py  retriever.py
sql_ops_agent/sql/: executor.py  guardrails.py
tests/: test_citation_guardrail.py  test_executor.py  test_guardrails.py  test_integration.py  test_retrieval.py
